[package]
name = "pylon-cxx"
description = "Rust wrapper of the Pylon libraries for Basler cameras"
license = "MIT OR Apache-2.0"
version = "0.1.3"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
repository = "https://github.com/strawlab/pylon-cxx"
keywords = ["basler", "camera", "bindings", "pylon", "image"]
categories = ["api-bindings", "external-ffi-bindings", "hardware-support", "multimedia::images"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
anyhow = "1"

[features]
backtrace = ["anyhow/backtrace"]
