[package]
name = "pylon-cxx"
description = "Rust wrapper of the Pylon libraries for Basler cameras"
license = "MIT OR Apache-2.0"
version = "0.3.7"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Falco Hirschenberger <falco.hirschenberger@gmail.com>",
    ]
edition = "2018"
repository = "https://github.com/strawlab/pylon-cxx"
keywords = ["basler", "camera", "bindings", "pylon", "image"]
categories = ["api-bindings", "external-ffi-bindings", "hardware-support", "multimedia::images"]

[dependencies]
cxx = "1.0.65"
tokio = {version = "1", features = ["rt", "macros", "net"], optional=true }
tokio-stream = { version = "0.1.8", optional = true }

[build-dependencies]
cxx-build = "1.0.65"

[dev-dependencies]
anyhow = "1"

[features]
backtrace = []
stream = ["tokio", "tokio-stream"]

[[example]]
name = "async-grab"
required-features = ["stream", "tokio/rt-multi-thread"]
